--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>1C Matrix</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
+      // Предварительная настройка Telegram WebApp
       if (window.Telegram && window.Telegram.WebApp) {
-        window.Telegram.WebApp.ready();
-        window.Telegram.WebApp.expand();
+        const tg = window.Telegram.WebApp;
+        tg.ready();
+        tg.expand();
+        tg.enableClosingConfirmation();
       }
       
       tailwind.config = {
@@ -30,10 +33,26 @@
       }
     </script>
     <style>
+      /* Критические стили для предотвращения белого экрана и вспышек нестилизованного контента */
+      :root {
+        --bg-color: #0F172A;
+        --safe-area-inset-top: env(safe-area-inset-top);
+        --safe-area-inset-bottom: env(safe-area-inset-bottom);
+      }
+      body { 
+        background-color: var(--bg-color); 
+        margin: 0; 
+        padding: 0; 
+        -webkit-tap-highlight-color: transparent; 
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+        color: #E2E8F0;
+        overflow-x: hidden;
+      }
+      #root { min-height: 100vh; display: flex; flex-direction: column; }
       .custom-scrollbar::-webkit-scrollbar { width: 4px; }
       .custom-scrollbar::-webkit-scrollbar-track { background: transparent; }
       .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.1); border-radius: 10px; }
-      body { background-color: #0F172A; margin: 0; padding: 0; -webkit-tap-highlight-color: transparent; }
+      .pb-safe { padding-bottom: var(--safe-area-inset-bottom); }
     </style>
     <script type="importmap">
 {
@@ -43,17 +62,17 @@
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "lucide-react": "https://esm.sh/lucide-react@0.475.0",
     "recharts": "https://esm.sh/recharts@2.15.1",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "express": "https://esm.sh/express@^5.2.1",
     "path": "https://esm.sh/path@^0.12.7",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "url": "https://esm.sh/url@^0.11.4",
     "fs": "https://esm.sh/fs@^0.0.1-security",
-    "url": "https://esm.sh/url@^0.11.4"
+    "express": "https://esm.sh/express@^5.2.1"
   }
 }
 </script>
   </head>
-  <body class="bg-sbis-secondary text-sbis-text font-sans antialiased overflow-x-hidden">
+  <body class="bg-sbis-secondary text-sbis-text antialiased">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
