--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-      // Предварительная настройка Telegram WebApp
       if (window.Telegram && window.Telegram.WebApp) {
         const tg = window.Telegram.WebApp;
         tg.ready();
         tg.expand();
-        tg.enableClosingConfirmation();
       }
       
       tailwind.config = {
@@ -21,11 +19,20 @@
           extend: {
             colors: {
               sbis: {
-                primary: '#0055BB',
-                secondary: '#0F172A',
-                accent: '#3B82F6',
-                text: '#E2E8F0',
-                border: 'rgba(255,255,255,0.05)'
+                primary: '#0066FF',
+                dark: '#020617',
+                card: 'rgba(30, 41, 59, 0.5)',
+                accent: '#38BDF8',
+              }
+            },
+            animation: {
+              'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+              'float': 'float 3s ease-in-out infinite',
+            },
+            keyframes: {
+              float: {
+                '0%, 100%': { transform: 'translateY(0)' },
+                '50%': { transform: 'translateY(-10px)' },
               }
             }
           }
@@ -33,46 +40,46 @@
       }
     </script>
     <style>
-      /* Критические стили для предотвращения белого экрана и вспышек нестилизованного контента */
       :root {
-        --bg-color: #0F172A;
-        --safe-area-inset-top: env(safe-area-inset-top);
-        --safe-area-inset-bottom: env(safe-area-inset-bottom);
+        --bg-color: #020617;
       }
       body { 
         background-color: var(--bg-color); 
         margin: 0; 
-        padding: 0; 
-        -webkit-tap-highlight-color: transparent; 
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-        color: #E2E8F0;
-        overflow-x: hidden;
+        color: #F8FAFC;
+        font-family: 'Inter', -apple-system, system-ui, sans-serif;
+        -webkit-font-smoothing: antialiased;
       }
-      #root { min-height: 100vh; display: flex; flex-direction: column; }
-      .custom-scrollbar::-webkit-scrollbar { width: 4px; }
-      .custom-scrollbar::-webkit-scrollbar-track { background: transparent; }
-      .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.1); border-radius: 10px; }
-      .pb-safe { padding-bottom: var(--safe-area-inset-bottom); }
+      .glass-card {
+        background: rgba(30, 41, 59, 0.4);
+        backdrop-filter: blur(12px);
+        -webkit-backdrop-filter: blur(12px);
+        border: 1px solid rgba(255, 255, 255, 0.05);
+      }
+      .premium-shadow {
+        box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
+      }
+      .custom-scrollbar::-webkit-scrollbar { width: 3px; }
+      .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(56, 189, 248, 0.2); border-radius: 10px; }
+      .pb-safe { padding-bottom: env(safe-area-inset-bottom); }
+      .pt-safe { padding-top: env(safe-area-inset-top); }
     </style>
-    <script type="importmap">
+  <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "lucide-react": "https://esm.sh/lucide-react@0.475.0",
-    "recharts": "https://esm.sh/recharts@2.15.1",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "path": "https://esm.sh/path@^0.12.7",
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "url": "https://esm.sh/url@^0.11.4",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "express": "https://esm.sh/express@^5.2.1",
+    "path": "https://esm.sh/path@^0.12.7",
     "fs": "https://esm.sh/fs@^0.0.1-security",
-    "express": "https://esm.sh/express@^5.2.1"
+    "url": "https://esm.sh/url@^0.11.4",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
   }
 }
 </script>
-  </head>
-  <body class="bg-sbis-secondary text-sbis-text antialiased">
+</head>
+  <body class="antialiased">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
