Fix render.yaml type and connect frontend to backend

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
+      // Инициализация Telegram WebApp до загрузки модулей
       if (window.Telegram && window.Telegram.WebApp) {
         const tg = window.Telegram.WebApp;
         tg.ready();
@@ -21,7 +22,7 @@
               sbis: {
                 primary: '#0066FF',
                 dark: '#020617',
-                card: 'rgba(30, 41, 59, 0.5)',
+                card: 'rgba(30, 41, 59, 0.4)',
                 accent: '#38BDF8',
               }
             },
@@ -49,7 +50,9 @@
         color: #F8FAFC;
         font-family: 'Inter', -apple-system, system-ui, sans-serif;
         -webkit-font-smoothing: antialiased;
+        overflow-x: hidden;
       }
+      #root { min-height: 100vh; }
       .glass-card {
         background: rgba(30, 41, 59, 0.4);
         backdrop-filter: blur(12px);
@@ -57,30 +60,32 @@
         border: 1px solid rgba(255, 255, 255, 0.05);
       }
       .premium-shadow {
-        box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
+        box-shadow: 0 20px 50px rgba(0, 0, 0, 0.4);
       }
       .custom-scrollbar::-webkit-scrollbar { width: 3px; }
       .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(56, 189, 248, 0.2); border-radius: 10px; }
       .pb-safe { padding-bottom: env(safe-area-inset-bottom); }
       .pt-safe { padding-top: env(safe-area-inset-top); }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.475.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
     "express": "https://esm.sh/express@^5.2.1",
     "path": "https://esm.sh/path@^0.12.7",
     "fs": "https://esm.sh/fs@^0.0.1-security",
-    "url": "https://esm.sh/url@^0.11.4",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
+    "url": "https://esm.sh/url@^0.11.4"
   }
 }
 </script>
-</head>
+  </head>
   <body class="antialiased">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
