--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-      // Инициализация Telegram WebApp до загрузки модулей
       if (window.Telegram && window.Telegram.WebApp) {
         const tg = window.Telegram.WebApp;
         tg.ready();
@@ -25,47 +24,55 @@
                 card: 'rgba(30, 41, 59, 0.4)',
                 accent: '#38BDF8',
               }
-            },
-            animation: {
-              'pulse-slow': 'pulse 4s cubic-bezier(0.4, 0, 0.6, 1) infinite',
-              'float': 'float 3s ease-in-out infinite',
-            },
-            keyframes: {
-              float: {
-                '0%, 100%': { transform: 'translateY(0)' },
-                '50%': { transform: 'translateY(-10px)' },
-              }
             }
           }
         }
       }
     </script>
     <style>
-      :root {
-        --bg-color: #020617;
-      }
+      :root { --bg-color: #020617; }
       body { 
-        background-color: var(--bg-color); 
+        background-color: #010409; 
         margin: 0; 
         color: #F8FAFC;
         font-family: 'Inter', -apple-system, system-ui, sans-serif;
         -webkit-font-smoothing: antialiased;
-        overflow-x: hidden;
+        overflow: hidden; /* Prevent body scroll, use app scroll */
       }
-      #root { min-height: 100vh; }
+      #root { 
+        height: 100vh; 
+        display: flex; 
+        justify-content: center; 
+        align-items: center;
+      }
+      .app-container {
+        width: 100%;
+        max-width: 500px; /* Ограничение для десктопа */
+        height: 100%;
+        background-color: var(--bg-color);
+        position: relative;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0 0 100px rgba(0,0,0,0.5);
+      }
       .glass-card {
         background: rgba(30, 41, 59, 0.4);
         backdrop-filter: blur(12px);
         -webkit-backdrop-filter: blur(12px);
         border: 1px solid rgba(255, 255, 255, 0.05);
       }
-      .premium-shadow {
-        box-shadow: 0 20px 50px rgba(0, 0, 0, 0.4);
-      }
-      .custom-scrollbar::-webkit-scrollbar { width: 3px; }
+      .custom-scrollbar::-webkit-scrollbar { width: 4px; }
       .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(56, 189, 248, 0.2); border-radius: 10px; }
-      .pb-safe { padding-bottom: env(safe-area-inset-bottom); }
+      .pb-safe { padding-bottom: calc(env(safe-area-inset-bottom) + 1.5rem); }
       .pt-safe { padding-top: env(safe-area-inset-top); }
+      
+      /* Анимации без скачков */
+      .fade-in { animation: fadeIn 0.2s ease-out; }
+      @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+      
+      /* Фикс для iOS WebView */
+      input, textarea { font-size: 16px !important; } 
     </style>
     <script type="importmap">
 {
@@ -74,12 +81,12 @@
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "lucide-react": "https://esm.sh/lucide-react@0.475.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "express": "https://esm.sh/express@^5.2.1",
     "path": "https://esm.sh/path@^0.12.7",
-    "fs": "https://esm.sh/fs@^0.0.1-security",
-    "url": "https://esm.sh/url@^0.11.4"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "url": "https://esm.sh/url@^0.11.4",
+    "express": "https://esm.sh/express@^5.2.1",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "fs": "https://esm.sh/fs@^0.0.1-security"
   }
 }
 </script>
